--- a/new/config.html
+++ b/new/config.html
@@ -87,17 +87,17 @@
                                 </div>
                             </li>
                         </a>
-                        <a onclick="javascript:alert('준비중');">
+                        <a href="./account.html">
                             <li>
                                 <div class="box">
                                     <div class="title">계정관리</div>
                                 </div>
                             </li>
                         </a>
-                        <a onclick="javascript:alert('준비중');">
+                        <a href="./shopEdit.html">
                             <li>
                                 <div class="box">
-                                    <div class="title">주문관리</div>
+                                    <div class="title">SHOP</div>
                                 </div>
                             </li>
                         </a>
@@ -108,7 +108,7 @@
                                 </div>
                             </li>
                         </a>
-                        <a onclick="javascript:alert('준비중');">
+                        <a href="./login.html.html">
                             <li>
                                 <div class="box">
                                     <div class="title">로그아웃</div>
