--- a/new/config.html
+++ b/new/config.html
@@ -108,7 +108,7 @@
                                 </div>
                             </li>
                         </a>
-                        <a href="./login.html.html">
+                        <a href="./login.html">
                             <li>
                                 <div class="box">
                                     <div class="title">로그아웃</div>
