--- a/new/config.html
+++ b/new/config.html
@@ -97,14 +97,7 @@
                         <a href="./shopEdit.html">
                             <li>
                                 <div class="box">
-                                    <div class="title">SHOP</div>
-                                </div>
-                            </li>
-                        </a>
-                        <a onclick="javascript:alert('준비중');">
-                            <li>
-                                <div class="box">
-                                    <div class="title">환경설정</div>
+                                    <div class="title">주문설정</div>
                                 </div>
                             </li>
                         </a>
