--- a/new/shopEdit.html
+++ b/new/shopEdit.html
@@ -220,27 +220,15 @@
                         
                         <div class="list">
 
-                            <div class="summary temp" style="display: none;">
-                                <div class="box">
-                                    <input type="text" class="title colname">
-                                </div>
-                                <div class="box">
-                                    <input type="text" class="title wname">
-                                </div>
-                                <div class="box delete">
-                                    <a onclick="alert('삭제?')">삭제</a>
-                                </div>
-                            </div>
-
                             <div class="summary">
                                 <div class="box">
-                                    <input type="text" class="title colname">
+                                    <input type="text" class="title colname" value="DATE">
                                 </div>
                                 <div class="box">
-                                    <input type="text" class="title wname">
+                                    <input type="text" class="title wname" value="REGDATE">
                                 </div>
                                 <div class="box delete">
-                                    <a onclick="alert('삭제?')">삭제</a>
+                                    <a onclick="alert('삭제?')"></a>
                                 </div>
                             </div>
 
