--- a/new/index.html
+++ b/new/index.html
@@ -13,15 +13,15 @@
     <link href="./css/style.css" rel="stylesheet">
 </head>
 
-<body onload="showApp()">
-    <div id="loading" style="display: none;">
+<body>
+    <div id="loading"  style="display: none;">
         <img src="img/icon/icon_default.png">
     </div>
    
     <div id="app">    
         <header>
             <div class="option">
-                <img src="img/icon/icon_more_horiz.png">
+                <a onclick="$('#filter').fadeIn();" id="openF"><img src="img/icon/icon_more_horiz.png"></a>
             </div>
             <div class="shop">
                 <div id="avatar" class="avatar">
@@ -47,7 +47,7 @@
             </section>
 
             <section class="date_board">
-                <div class="title">기간 Duration</div>
+                <div class="title">기간 Period</div>
                 <ul>
                     <li class="shadow">
                         <span class="label">시작일</span>
@@ -63,7 +63,7 @@
 
 
             <section class="list_board">
-                <div class="title">주문 Orders</div>
+                <div class="title">주문 orders</div>
                 <ul>
                     <a v-for="order in orders" v-bind:href="'./orders.html?pid=' + order.pid">
                         <li v-bind:class="order.state_class" class="shadow">
@@ -77,16 +77,7 @@
         </main>
 
 
-        <footer>
-            <nav>
-                <ul>
-                    <li class="nav_list"><a href="index.html"><img src="img/icon/icon_home.png"></a></li>
-                    <li class="nav_orders"><a href="orders.html"><img src="img/icon/icon_description.png"></a></li>
-                    <li class="nav_stats"><a href="chart.html"><img src="img/icon/icon_chart.png"></a></li>
-                    <li class="nav_mypage"><a href="config.html"><img src="img/icon/icon_settings.png"></a></li>
-                </ul>
-            </nav>
-        </footer>
+        <footer></footer>
 
 
 
@@ -121,9 +112,21 @@
     <script>
         /* preloader */
 
-        function showApp(){
-            $('#loading').fadeOut();
+        var go;
+
+        function showApp() {
+            go = setTimeout(showPage, 1000);
         }
+
+        function showPage() {
+            $("#loading").fadeOut();
+            $("#app").fadeIn();
+        }
+
+        /* layout */
+        
+        $('footer').load('tile/footer.html');
+
 
         /* date */
         var initDate = new Date();
@@ -196,8 +199,12 @@
             }
         })
 
-        $('.option').on('click', function () {
+        $('#openF').on('click', function () {
             $('#filter').fadeIn();
+        });
+
+        $('#avaimg').on('click', function () {
+            alert('준비중입니다');
         });
 
         $('.close').on('click', function () {
