--- a/new/tile/footer.html
+++ b/new/tile/footer.html
@@ -1,8 +1,8 @@
 <nav>
     <ul>
-        <li class="nav_list"><a href="index.html"><i class="material-icons">home</i></a></li>
-        <li class="nav_orders"><a href="orders.html"><i class="material-icons">assignment</i></a></li>
-        <li class="nav_stats"><a href="chart.html"><i class="material-icons">pie_chart</i></a></li>
-        <li class="nav_mypage"><a href="config.html"><i class="material-icons">settings</i></a></li>
+        <li class="nav_list"><a href="index.html"><img src="img/icon/icon_home.png"></a></li>
+        <li class="nav_orders"><a href="orders.html"><img src="img/icon/icon_description.png"></a></li>
+        <li class="nav_stats"><a href="chart.html"><img src="img/icon/icon_chart.png"></a></li>
+        <li class="nav_mypage"><a href="config.html"><img src="img/icon/icon_settings.png"></a></li>
     </ul>
 </nav>
